funzione unica, ma alcune ricerche le trova quando gli pare, da correggere

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
    box-sizing: border-box;
 } */
 
+.fas.fa-star{
+    color: gold;
+}
+
+.far.fa-star{
+    color: lightgrey;   
+}
+
 .flag {
     width: 20px;
     height: 12px;
